packages/verta-protocol/fixtures/token/jws/invalid/AU-TOKEN-NBF-FUTURE-003.jwt
eyJ0eXAiOiJKV1QiLCJhbGciOiJFZERTQSIsImtpZCI6ImZpeHR1cmUtdG9rZW4ta2V5LTEifQ.eyJpc3MiOiJicmlkZ2UuZXhhbXBsZSIsImF1ZCI6InZlcnRhLWdhdGV3YXkiLCJzdWIiOiJhY2N0LTEiLCJqdGkiOiJucy0xNzc1MDAyMzIwMDAwMDAwMDAwIiwiaWF0IjoxNzc1MDAyMzIwLCJuYmYiOjE3NzUwMDIzMjAsImV4cCI6MTc3NTAwMjYyMCwiZGV2aWNlX2lkIjoiZGV2aWNlLTEiLCJtYW5pZmVzdF9pZCI6Im1hbi0yMDI2LTA0LTAxLTAwMSIsInBvbGljeV9lcG9jaCI6NywiY29yZV92ZXJzaW9ucyI6WzFdLCJjYXJyaWVyX3Byb2ZpbGVzIjpbImNhcnJpZXItcHJpbWFyeSJdLCJjYXBhYmlsaXRpZXMiOlsxLDJdLCJzZXNzaW9uX21vZGVzIjpbInRjcCJdLCJyZWdpb25fc2NvcGUiOiJldS1jZW50cmFsIiwidG9rZW5fbWF4X3JlbGF5X3N0cmVhbXMiOjgsInRva2VuX21heF91ZHBfZmxvd3MiOjQsInRva2VuX21heF91ZHBfcGF5bG9hZCI6MTIwMH0.uYD6BIkuzZEHXUY_KQcSMpZLGs_YSQXKUn4TRoJ_MzEBFEJngHDkb_XHKx-jcU4hkNTYzN8IuJhlF-IcJdyhDA